# paws4claws

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  INSTALL.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  publish.yml
daemon/: Dockerfile  paws.py
docs/: aws-file-input.md
docs/superpowers/plans/: 2026-05-18-paws-v1-design.md  2026-05-18-paws-v1.md
examples/nanoclaw/: README.md  paws-aws.md
examples/nanoclaw/add-paws4claws/: SKILL.md
examples/nanoclaw/use-paws/: SKILL.md
hooks/: prek-autoupdate-hook.sh  uv-lock-hook.sh
scripts/: smoke.sh
specs/v1/: 2026-05-18-paws-v1-design.md
tests/: file_commands.py  output_commands.py  stdin_commands.py
tests/integration/: test_server.py
tests/unit/: test_files.py  test_output_files.py  test_sanitize.py  test_startup.py  test_stdin.py  test_stdin_commands.py  test_wrapper_file_detection.py  test_wrapper_output.py
wrapper/: aws  file_allowlist.sh
