[project]
name = "paws4claws"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "S",   # bandit (security)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "S101",  # assert statements fine in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S"]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["daemon"]
